unpackaged/main/default/objects/Vendor_Suggested__c/Vendor_Suggested__c.object-meta.xml
<CustomObject>
    <label>Vendor Suggestion</label>
    <nameField>
        <displayFormat>VS-{000000}</displayFormat>
        <label>VS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendors Suggestions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>