unpackaged/main/default/objects/Vendor_Suggested__c/fields/Logbook__c.field-meta.xml
<CustomField>
    <fullName>Logbook__c</fullName>
    <label>Logbook</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Vendors Suggestions</relationshipLabel>
    <relationshipName>Vendors_Sugested</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>