unpackaged/main/default/objects/Vendor_Suggested__c/fields/Vendor_Details__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Details (OLD)</label>
    <type>TextArea</type>
</CustomField>