unpackaged/main/default/objects/Vendor_Suggested__c/fields/Vendor_Details_HTML__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Details_HTML__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>